--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <section>
         <h2>About Me</h2>
         <p>
-            I am a high school sophomore with a strong interest in engineering,
-            robotics, and computer science. I enjoy building technical projects
-            that model real-world engineering trade-offs and applying both
-            analytical thinking and coding to solve problems.
+            I am a high school sophomore with a strong interest in engineering and computer science.
+            I enjoy building technical projects that model real-world problems
         </p>
     </section>
 
@@ -75,7 +73,7 @@
     <section>
         <h2>Clubs & Activities</h2>
         <ul>
-            <li>Robotics (FRC) — 2 years</li>
+            <li>Robotics (FRC) — 1 year</li>
             <li>Model United Nations (MUN) — 2 years</li>
             <li>MESA / NOVA — 1 year</li>
             <li>Technology Student Association (TSA) — 1 year</li>
