--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>About Me</h2>
         <p>
             I am a high school sophomore with a strong interest in engineering and computer science.
-            I enjoy building technical projects that model real-world problems
+            I enjoy building technical projects that model real-world problems.
         </p>
     </section>
 
@@ -64,8 +64,7 @@
         </div>
 
         <p>
-            I am currently enrolled in Harvard’s CS50x and actively developing
-            additional programming and engineering projects to expand this portfolio.
+            I am currently enrolled in Harvard’s CS50x and actively developing projects to expand this portfolio.
         </p>
     </section>
 
@@ -98,18 +97,6 @@
                 1st Place — Regional Engineering Design Competition
                 (Sustainability Solutions)
             </li>
-        </ul>
-    </section>
-
-
-    <section>
-        <h2>Technical Skills</h2>
-        <ul>
-            <li>Python (Object-Oriented Programming)</li>
-            <li>Engineering Trade-Off Analysis</li>
-            <li>HTML & CSS</li>
-            <li>Robotics Systems (FRC)</li>
-            <li>Problem Decomposition & Technical Documentation</li>
         </ul>
     </section>
 
