--- a/index.html
+++ b/index.html
@@ -3,111 +3,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanay Mishra | Engineering Portfolio</title>
+    <title>Tanay Mishra | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+<nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+</nav>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-    </nav>
+<header>
+    <h1>Tanay Mishra</h1>
+    <p>High School Sophomore | Engineering & Computer Science</p>
+</header>
 
+<section>
+    <h2>About Me</h2>
+    <p>
+        I am a high school sophomore with a strong interest in engineering and computer science.
+        I enjoy building technical projects that model real-world problems through structured analysis
+        and software design.
+    </p>
+</section>
 
-    <header>
-        <h1>Tanay Mishra</h1>
-        <p>High School Sophomore | Engineering & Computer Science</p>
-    </header>
+<section>
+    <h2>Academics</h2>
+    <ul>
+        <li><strong>Grade:</strong> 10th (Sophomore)</li>
+        <li><strong>GPA:</strong> 4.0 UW, 4.2 W</li>
+        <li><strong>Career Interest:</strong> Technology & Engineering</li>
+    </ul>
 
-    <section>
-        <h2>About Me</h2>
+    <h3>Advanced Coursework</h3>
+    <ul>
+        <li>AP Human Geography — Score: 5</li>
+        <li>AP Psychology (in progress)</li>
+        <li>AP U.S. Government & Politics (in progress)</li>
+        <li>AP Computer Science Principles (in progress)</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Projects</h2>
+
+    <!-- PROJECT 1 -->
+    <div class="project">
+        <h3>Engineering Trade-Off Simulator (Python)</h3>
         <p>
-            I am a high school sophomore with a strong interest in engineering and computer science.
-            I enjoy building technical projects that model real-world problems.
+            A Python-based, FRC-inspired engineering analysis tool that evaluates
+            design options using weighted performance metrics, constraints,
+            and object-oriented programming principles.
         </p>
-    </section>
+        <a href="tradeoff.html">Project Details</a> |
+        <a href="https://github.com/tanay-coder123/engineering-tradeoff-simulator" target="_blank">
+            GitHub Repository
+        </a>
+    </div>
 
-
-    <section>
-        <h2>Academics</h2>
-        <ul>
-            <li><strong>Grade:</strong> 10th (Sophomore)</li>
-            <li><strong>GPA:</strong> 4.0 UW, 4.2 W</li>
-            <li><strong>Career Interest:</strong> Technology & Engineering</li>
-        </ul>
-
-        <h3>Advanced Coursework</h3>
-        <ul>
-            <li>AP Human Geography — Score: 5</li>
-            <li>AP Psychology (in progress)</li>
-            <li>AP U.S. Government & Politics (in progress)</li>
-            <li>AP Computer Science Principles (in progress)</li>
-        </ul>
-    </section>
-
-
-    <section>
-        <h2>Projects</h2>
-
-        <div class="project">
-            <h3>Engineering Trade-Off Simulator</h3>
-            <p>
-                A Python-based, FRC-inspired engineering analysis tool that
-                evaluates design options using weighted performance metrics,
-                constraints, and object-oriented programming principles.
-            </p>
-            <a href="tradeoff.html">Project Details</a> |
-            <a href="https://github.com/tanay-coder123/engineering-tradeoff-simulator" target="_blank">
-                GitHub Repository
-            </a>
-        </div>
-
+    <!-- PROJECT 2 -->
+    <div class="project">
+        <h3>Engineering Trade-Off Visualizer (Web App)</h3>
         <p>
-            I am currently enrolled in Harvard’s CS50x and actively developing projects to expand this portfolio.
+            An interactive web-based engineering visualizer that allows users
+            to evaluate and compare designs using real-time sliders, weighted
+            priorities, live bar graph visualization, and saved design ranking.
         </p>
-    </section>
+        <a href="tradeoff-visualizer.html">Project Details</a> |
+        <a href="https://tanay-coder123.github.io/engineering-tradeoff-visualizer/" target="_blank">
+            Live Demo
+        </a> |
+        <a href="https://github.com/tanay-coder123/engineering-tradeoff-visualizer" target="_blank">
+            GitHub Repository
+        </a>
+    </div>
 
+    <p>
+        I am currently enrolled in Harvard’s CS50x and actively developing projects
+        to expand this portfolio.
+    </p>
+</section>
 
-    <section>
-        <h2>Clubs & Activities</h2>
-        <ul>
-            <li>Robotics (FRC) — 1 year</li>
-            <li>Model United Nations (MUN) — 2 years</li>
-            <li>MESA / NOVA — 1 year</li>
-            <li>Technology Student Association (TSA) — 1 year</li>
-            <li>Future Business Leaders of America (FBLA) — 1 year</li>
-            <li>South Asian Student Association (SASA) — 1 year</li>
-        </ul>
-    </section>
+<section>
+    <h2>Clubs & Activities</h2>
+    <ul>
+        <li>Robotics (FRC) — 1 year</li>
+        <li>Model United Nations (MUN) — 2 years</li>
+        <li>MESA / NOVA — 1 year</li>
+        <li>Technology Student Association (TSA) — 1 year</li>
+        <li>Future Business Leaders of America (FBLA) — 1 year</li>
+        <li>South Asian Student Association (SASA) — 1 year</li>
+    </ul>
+</section>
 
+<section>
+    <h2>Leadership</h2>
+    <ul>
+        <li>Treasurer, South Asian Student Association (SASA)</li>
+    </ul>
+</section>
 
-    <section>
-        <h2>Leadership</h2>
-        <ul>
-            <li>Treasurer, South Asian Student Association (SASA)</li>
-        </ul>
-    </section>
+<section>
+    <h2>Awards & Competitions</h2>
+    <ul>
+        <li>
+            1st Place — Regional Engineering Design Competition
+            (Sustainability Solutions)
+        </li>
+    </ul>
+</section>
 
-
-    <section>
-        <h2>Awards & Competitions</h2>
-        <ul>
-            <li>
-                1st Place — Regional Engineering Design Competition
-                (Sustainability Solutions)
-            </li>
-        </ul>
-    </section>
-
-
-    <section>
-        <h2>Links</h2>
-        <p>
-            <a href="https://github.com/tanay-coder123" target="_blank">GitHub</a> |
-            <a href="mailto:tanaym2010@gmail.com">Email</a>
-        </p>
-    </section>
+<section>
+    <h2>Links</h2>
+    <p>
+        <a href="https://github.com/tanay-coder123" target="_blank">GitHub</a> |
+        <a href="mailto:tanaym2010@gmail.com">Email</a>
+    </p>
+</section>
 
 </body>
 </html>
