--- a/projects.html
+++ b/projects.html
@@ -12,19 +12,42 @@
     <a href="projects.html">Projects</a>
 </nav>
 
-<h1>Projects</h1>
+<header>
+    <h1>Projects</h1>
+</header>
 
-<div class="project">
-    <h3>Engineering Trade-Off Simulator</h3>
-    <p>
-        Python-based tool for evaluating engineering design trade-offs
-        using user-defined weighting and constraints.
-    </p>
-    <a href="tradeoff.html">Project Details</a> |
-    <a href="https://github.com/tanay-coder123/engineering-tradeoff-simulator" target="_blank">
-        GitHub
-    </a>
-</div>
+<section>
+
+    <div class="project">
+        <h3>Engineering Trade-Off Simulator (Python)</h3>
+        <p>
+            A console-based engineering evaluation tool written in Python
+            that applies weighted scoring, constraints, and object-oriented
+            design to compare engineering solutions.
+        </p>
+        <a href="tradeoff.html">Project Details</a> |
+        <a href="https://github.com/tanay-coder123/engineering-tradeoff-simulator" target="_blank">
+            GitHub
+        </a>
+    </div>
+
+    <div class="project">
+        <h3>Engineering Trade-Off Visualizer (Web App)</h3>
+        <p>
+            A fully interactive web application that visualizes engineering
+            trade-offs using real-time sliders, priority weighting, live
+            bar charts, and saved design comparisons.
+        </p>
+        <a href="tradeoff-visualizer.html">Project Details</a> |
+        <a href="https://tanay-coder123.github.io/engineering-tradeoff-visualizer/" target="_blank">
+            Live Demo
+        </a> |
+        <a href="https://github.com/tanay-coder123/engineering-tradeoff-visualizer" target="_blank">
+            GitHub
+        </a>
+    </div>
+
+</section>
 
 </body>
 </html>
