--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@
         </a>
     </div>
 
-    <p>
-        I am currently enrolled in Harvard’s CS50x and actively developing projects
-        to expand this portfolio.
-    </p>
+
 </section>
 
 <section>
@@ -118,6 +115,13 @@
     <p>
         <a href="https://github.com/tanay-coder123" target="_blank">GitHub</a> |
         <a href="mailto:tanaym2010@gmail.com">Email</a>
+    </p>
+</section>
+<section>
+    <h2>Current Learning & Development</h2>
+    <p>
+        I am currently enrolled in Harvard’s <strong>CS50x: Introduction to Computer Science</strong>,
+        where I am strengthening my foundations in programming and problem-solving.
     </p>
 </section>
 
